--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -75,6 +75,7 @@
     "go away": "开溜~",
     "close": "不想走了",
     "go where": "看看我们去哪里",
+    "view home": "还是回主页吧",
     "view blog": "去看看Blog",
     "view muse": "观摩下作者的灵感乍现",
     "view life": "了解下作者的日常生活",
@@ -88,6 +89,10 @@
     "see skills": "看看我都会些啥 ?",
     "skills list": "技能小清单",
     "welcome": "热烈欢迎 !",
+    "blog": "博客",
+    "intro": "作者",
+    "muse": "灵感",
+    "life": "生活",
     "issue": "如果在使用过程中出现了任何问题, 请在该项目下提出Issue",
     "personal site": " 的个人网站",
     "coming soon": "该网站尚在开发中，敬请期待！",
